# Pipelines_in_AI_SDLC

./: README.md
AI_SDLC_maturity_levels/Level_1_Manual/: .gitignore  BUSINESS_REQUIREMENTS.md  README.md  pyproject.toml  requirements.txt
AI_SDLC_maturity_levels/Level_1_Manual/app/: serve_model.py
AI_SDLC_maturity_levels/Level_1_Manual/notebooks/: churn_model_dev.ipynb
AI_SDLC_maturity_levels/Level_1_Manual/scripts/: deploy.ps1
AI_SDLC_maturity_levels/Level_3_Automated_Gates/: .gitignore  ARCHITECTURE.md  BUSINESS_CASE.md  DEMO_SCRIPT.md  Dockerfile  README.md  pyproject.toml
AI_SDLC_maturity_levels/Level_3_Automated_Gates/.github/workflows/: ci.yml
AI_SDLC_maturity_levels/Level_3_Automated_Gates/app/: serve.py
AI_SDLC_maturity_levels/Level_3_Automated_Gates/app/templates/: base.html  config.html  dashboard.html  data_gate.html  drift_gate.html  eval_gate.html  pipeline.html
AI_SDLC_maturity_levels/Level_3_Automated_Gates/config/: gates.yaml
AI_SDLC_maturity_levels/Level_3_Automated_Gates/data/: customer_data.csv
AI_SDLC_maturity_levels/Level_3_Automated_Gates/monitoring/reference/: baseline_stats.json
AI_SDLC_maturity_levels/Level_3_Automated_Gates/scripts/: check_drift.py  evaluate.py  run_gates.py  serve.py  train.py  validate_data.py
AI_SDLC_maturity_levels/Level_3_Automated_Gates/src/: config.py  gates.py
AI_SDLC_maturity_levels/Level_3_Automated_Gates/src/data/: validate.py
AI_SDLC_maturity_levels/Level_3_Automated_Gates/tests/: conftest.py  test_data_validate.py  test_evaluate.py  test_features.py  test_gates.py  test_monitoring.py
(+28 files in other folders)
